--- a/requirements.txt
+++ b/requirements.txt
@@ -34,7 +34,7 @@ graphviz==0.20.3
 greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.5
-httptools==0.6.1
+httptools
 httpx==0.27.2
 idna==3.10
 itsdangerous==2.2.0
