--- a/ml_service/requirements.txt
+++ b/ml_service/requirements.txt
@@ -34,7 +34,7 @@ graphviz==0.20.3
 greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.5
-httptools
+httptools==0.6.4
 httpx==0.27.2
 idna==3.10
 itsdangerous==2.2.0
@@ -53,6 +53,7 @@ numpy==1.26.4
 orjson==3.10.7
 packaging==24.2
 pandas==2.2.3
+pika==1.3.2
 pillow==11.0.0
 plotly==5.24.1
 prompt_toolkit==3.0.48
